fixed double scrollbar

--- a/style.css
+++ b/style.css
@@ -60,6 +60,11 @@ body {
     height: 100vh;
 }
 .wrapper{
+
+}
+
+ body >*>*
+{
     overflow: hidden;
 }
 
